Replace reflection-based Exception mangling with copies
The old approach broke JVM internals, and was not necessary. Clean up and replace the approach in a way that avoids
creating new Exceptions if necessary.